--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,9 @@ h2 {
   margin-left: auto;
   max-width: 1140px;
 }
-
+section {
+  padding: 100px 0;
+}
 /* Banner Section */
 
 #banner {
@@ -63,4 +65,62 @@ h2 {
 .main-banner .ban-right img {
   width: 100%;
   vertical-align: middle;
+}
+/* Feature Section */
+#feature {
+}
+.feat-title {
+  text-align: center;
+}
+.feat-title h1 {
+  color: #272727;
+  font-size: 40px;
+  font-weight: 800;
+}
+.feat-title p {
+  color: #27272799;
+  width: 594px;
+  margin: 15px auto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.feat-cat {
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+  width: 100%;
+  margin-top: 50px;
+}
+.item1 {
+  background: #a7216226;
+}
+.item2 {
+  background: #0597a026;
+}
+.item3 {
+  background: #477d1126;
+}
+.feat-cat .feat-cat-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 33%;
+}
+.feat-cat .feat-cat-item .item-img {
+  border-radius: 300px 300px 0px 0px;
+  padding: 75px 75px 0 75px;
+}
+.feat-cat .feat-cat-item .item-img img {
+  width: 90%;
+  height: 290px;
+}
+.feat-cat .feat-cat-item .item-title {
+  color: #272727;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 35px;
+  text-decoration-line: underline;
+  margin-top: 20px;
 }
