--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -287,13 +287,13 @@ section {
 .foot-content p {
   color: #ffffffe6;
   text-align: center;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 400;
-  width: 480px;
+  width: 530px;
   margin: 0 auto;
   margin-bottom: 20px;
 }
-#footer p {
+#footer > p {
   color: #ffffff66;
   text-align: center;
   font-size: 12px;
